<resources>
    <string name="app_name">Setup Configurator</string>
    <string name="calculate">Calculate</string>
    <string name="lap_time">Lap Time</string>
    <string name="stint_length">Stint Length</string>
    <string name="litres_per_lap">Litres per Lap</string>
    <string name="s">s</string>
    <string name="m">m</string>
    <string name="l">L</string>
    <string name="safe_litres">Safe Litres</string>
    <string name="race_tactics">Race Tactics</string>
    <string name="fuel_calculator">Fuel Calculator</string>
    <string name="setup_reader">Setup Reader</string>
    <string name="preload_differential">Preload Differential</string>
    <string name="background">Background</string>
    <string name="mechanical_grip">MECHANICAL GRIP</string>
    <string name="front">FRONT</string>
    <string name="antiroll_bar">Antiroll Bar</string>
    <string name="brake_power">Brake Power</string>
    <string name="brake_bias">Brake Bias</string>
    <string name="steer_ratio">Steer Ratio</string>
    <string name="left_front">Left Front</string>
    <string name="wheel_rate">Wheel Rate</string>
    <string name="bumpstop_rate">Bumpstop Rate</string>
    <string name="bumpstop_range">Bumpstop Range</string>
    <string name="right_front">Right Front</string>
    <string name="left_rear">Left Rear</string>
    <string name="right_rear">Right Rear</string>
    <string name="rear">REAR</string>
    <string name="aero">AERO</string>
    <string name="ride_height">Ride Height</string>
    <string name="splitter">Splitter</string>
    <string name="brake_ducts">Brake Ducts</string>
    <string name="wing">Wing</string>
    <string name="dampers">DAMPERS</string>
    <string name="fast_rebound">Fast Rebound</string>
    <string name="rebound">Rebound</string>
    <string name="fast_bump">Fast Bump</string>
    <string name="bump">Bump</string>
    <string name="electronics">ELECTRONICS</string>
    <string name="electronic_elements">Electronic Elements</string>
    <string name="tc">TC</string>
    <string name="abs">ABS</string>
    <string name="ecumap">ECUMap</string>
    <string name="tc2">TC2</string>
    <string name="tyres">TYRES</string>
    <string name="psi">psi</string>
    <string name="toe">toe</string>
    <string name="camber">camber</string>
    <string name="caster">caster</string>
    <string name="error">ERROR</string>
    <string name="title_fuel_calculator">FUEL CALCULATOR</string>
    <string name="fuel_load">FUEL LOAD</string>
    <string name="safe_fuel">Safe Fuel</string>
    <string name="risky_fuel">Risky Fuel</string>
    <string name="data">DATA</string>
    <string name="formation_lap">Formation Lap</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>