<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".view.SetupReaderJsonTyresActivity">

    <ImageView
        android:id="@+id/image_view_background"
        style="@style/ImageViewBackground"
        android:contentDescription="@string/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <View
            android:id="@+id/view_title"
            style="@style/PrimaryTitleView" />

        <TextView
            android:id="@+id/text_view_title"
            style="@style/PrimaryTitleTextView"
            android:layout_alignStart="@+id/view_title"
            android:layout_alignTop="@+id/view_title"
            android:layout_alignEnd="@+id/view_title"
            android:layout_alignBottom="@+id/view_title"
            android:text="@string/electronics" />

        <View
            android:id="@+id/view_arrow_backward"
            style="@style/ViewArrowBack"
            android:layout_alignTop="@+id/text_view_title"
            android:layout_alignBottom="@+id/text_view_title" />

        <View
            android:id="@+id/view_arrow_forward"
            style="@style/ViewArrowForward"
            android:layout_alignTop="@+id/text_view_title"
            android:layout_alignBottom="@+id/text_view_title" />


        <LinearLayout
            style="@style/LinearView"
            android:layout_above="@+id/view_pub"
            android:layout_below="@+id/view_title"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_background"
                android:paddingBottom="5dp">

                <View
                    android:id="@+id/view_electronic_elements"
                    style="@style/SecondTitleView" />

                <TextView
                    android:id="@+id/text_electronic_elements"
                    style="@style/SecondTitleTextView"
                    android:layout_alignStart="@+id/view_electronic_elements"
                    android:layout_alignTop="@+id/view_electronic_elements"
                    android:layout_alignEnd="@+id/view_electronic_elements"
                    android:layout_alignBottom="@+id/view_electronic_elements"
                    android:text="@string/electronic_elements" />

                <TextView
                    android:id="@+id/text_view_tc"
                    style="@style/ThirdTitleTextView"
                    android:layout_below="@+id/view_electronic_elements"
                    android:text="@string/tc" />

                <ProgressBar
                    android:id="@+id/progress_tc1"
                    style="@style/ProgressBar"
                    android:layout_alignTop="@+id/text_view_tc"
                    android:layout_alignBottom="@+id/text_view_tc"
                    android:theme="@style/ProgressBar" />

                <TextView
                    android:id="@+id/text_view_tc1"
                    style="@style/TextViewProgressBar"
                    android:layout_alignStart="@id/progress_tc1"
                    android:layout_alignTop="@id/progress_tc1"
                    android:layout_alignEnd="@id/progress_tc1"
                    android:layout_alignBottom="@id/progress_tc1" />

                <TextView
                    android:id="@+id/text_view_abs1"
                    style="@style/ThirdTitleTextView"
                    android:layout_below="@+id/text_view_tc"
                    android:text="@string/abs" />

                <ProgressBar
                    android:id="@+id/progress_abs"
                    style="@style/ProgressBar"
                    android:layout_alignTop="@+id/text_view_abs1"
                    android:layout_alignBottom="@+id/text_view_abs1"
                    android:theme="@style/ProgressBar" />

                <TextView
                    android:id="@+id/text_view_abs"
                    style="@style/TextViewProgressBar"
                    android:layout_alignStart="@id/progress_abs"
                    android:layout_alignTop="@id/progress_abs"
                    android:layout_alignEnd="@id/progress_abs"
                    android:layout_alignBottom="@id/progress_abs" />

                <TextView
                    android:id="@+id/text_view_ecu_map1"
                    style="@style/ThirdTitleTextView"
                    android:layout_below="@+id/text_view_abs1"
                    android:text="@string/ecumap" />

                <ProgressBar
                    android:id="@+id/progress_ecu_map"
                    style="@style/ProgressBar"
                    android:layout_alignTop="@+id/text_view_ecu_map1"
                    android:layout_alignBottom="@+id/text_view_ecu_map1"
                    android:theme="@style/ProgressBar" />

                <TextView
                    android:id="@+id/text_view_ecu_map"
                    style="@style/TextViewProgressBar"
                    android:layout_alignStart="@id/progress_ecu_map"
                    android:layout_alignTop="@id/progress_ecu_map"
                    android:layout_alignEnd="@id/progress_ecu_map"
                    android:layout_alignBottom="@id/progress_ecu_map" />

                <TextView
                    android:id="@+id/text_view_tc_2_1"
                    style="@style/ThirdTitleTextView"
                    android:layout_below="@+id/text_view_ecu_map1"
                    android:text="@string/tc2" />

                <ProgressBar
                    android:id="@+id/progress_tc2"
                    style="@style/ProgressBar"
                    android:layout_alignTop="@+id/text_view_tc_2_1"
                    android:layout_alignBottom="@+id/text_view_tc_2_1"
                    android:theme="@style/ProgressBar" />

                <TextView
                    android:id="@+id/text_view_tc2"
                    style="@style/TextViewProgressBar"
                    android:layout_alignStart="@id/progress_tc2"
                    android:layout_alignTop="@id/progress_tc2"
                    android:layout_alignEnd="@id/progress_tc2"
                    android:layout_alignBottom="@id/progress_tc2" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/view_pub"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black" />

    </RelativeLayout>

</RelativeLayout>